--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0rem 20%;
+  font-family: 'Montserrat', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +12,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h3{
+  color: rgb(69, 68, 68);
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  margin: 2rem 0;
+}
+h4{
+  color: rgb(69, 68, 68);
+  font-size: 1rem;
+}
+a{
+  color: rgb(69, 68, 68);
 }
